--- a/School.UI/Views/Home/Index.cshtml
+++ b/School.UI/Views/Home/Index.cshtml
@@ -742,9 +742,9 @@ box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2
 
         <div id="basePartialHolder" class="row rm-pd" style="display:none;border: 1px solid silver;">
             <div class="divParent rd col-xs-12 rm-pd rd" style="padding:0;margin:0;position: relative;">
-
-                <div class="divHeader col-xs-12 rm-pd" style="padding: 0px; margin: 0;padding:10px; min-height: 40px; max-height: 40px; display: block; background-color: rgb(47 ,71 ,86); border: 1px solid wheat; ">
-                    <p class="col-xs-12 headerText login-box-msg text-center rm-pd" style="min-height:25px;max-height:25px; color:white">Header Heading</p>
+                @*                 <div class="divHeader col-xs-12 rm-pd" style="padding: 0px; margin: 0;padding:10px; min-height: 40px; max-height: 40px; display: block; background-color: rgb(244, 247, 247); border: 1px solid rgb(240, 240, 240); "> *@
+                <div class="divHeader col-xs-12 rm-pd" style="padding: 0px; margin: 0;padding:10px; min-height: 40px; max-height: 40px; display: block; background-color: rgb(240, 240, 240); border: 1px solid rgb(240, 240, 240); ">
+                    <p class="col-xs-12 headerText login-box-msg text-center rm-pd" style="min-height:25px;max-height:25px; color:black;">Header Heading</p>
                 </div>
 
                 <div id="partialHolder" class="partialHolder col-xs-12 rm-pd rd" style="padding:20px;min-height:30px;border:0px solid red;">
