--- a/School.UI/Views/StudentResult/_ViewStudent.cshtml
+++ b/School.UI/Views/StudentResult/_ViewStudent.cshtml
@@ -20,6 +20,16 @@
         .card-s:hover {
             box-shadow: 0 2px 4px rgba(0,0,0,0.25), 0 2px 2px rgba(0,0,0,0.22);
         }
+
+    .sp-btn {
+        background-color: rgb(240, 240, 240);
+        border: 1px solid wheat;
+    }
+        .sp-btn:hover {
+            background-color: rgb(51, 122, 183);
+            border: 1px solid wheat;
+        }
+
 </style>
 
 <div id="name-page" class="col-md-12" style="border: 0px solid white; display: inline-block;">
