--- a/School.UI/Views/StudentResult/_ViewStudent.cshtml
+++ b/School.UI/Views/StudentResult/_ViewStudent.cshtml
@@ -103,7 +103,7 @@
                                     @Html.DisplayFor(modelItem => item.GradeName)
                                 </td>
                                 <td>
-                                    <button id="btnEdit" type="button" class="btnEdit btn btn-primary" style="width:100px;">View Report</button>
+                                    <button id="btnEdit" type="button" class="btnEdit btn sp-btn" style="width:100px;">View Report</button>
                                 </td>
                             </tr>
                         }
